# react-native-adhan

./: .env  .gitignore  Adhan.podspec  CLAUDE.md  CONTRIBUTING.md  DEFAULT_VALUES.md  EXPO.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  package-lock.json  package.json  plugin.js  react-native-adhan-1.0.0.tgz  react-native-adhan-1.0.3.tgz  react-native-adhan-1.0.4.tgz  react-native-adhan.podspec  react-native.config.js  react_native_adhan.podspec  test-integration.js  test_runner  tsconfig.json
android/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle
android/adhan-core/: build.gradle
android/src/main/cpp/: CMakeLists.txt
android/src/main/java/com/adhan/: AdhanModule.kt  AdhanPackage.kt
cpp/: Adhan.cpp  Adhan.h  AdhanCalculations.cpp  AdhanCalculations.h  AdhanJNI.cpp  AdhanModule.cpp  AdhanModule.mm  AdhanSpec.h  Angle.cpp  Angle.h  Astronomical.cpp  Astronomical.h  CMakeLists.txt.bak  CalculationMethod.cpp  CalculationMethod.h  CalculationParameters.cpp  CalculationParameters.h  Coordinates.cpp  Coordinates.h  DateComponents.cpp  DateComponents.h  Enums.h  HighLatitudeRule.cpp  JniBridge.cpp  MathUtils.cpp  MathUtils.h  NativeAdhan.cpp  NativeAdhan.h  NativeAdhanModule.cpp  NativeAdhanModule.h  PrayerAdjustments.cpp  PrayerAdjustments.h  PrayerTimes.cpp  PrayerTimes.h  Qibla.cpp  Qibla.h  SolarCoordinates.cpp  SolarCoordinates.h  SolarTime.cpp  SolarTime.h  (+2 more)
docs/: API.md
example/: README.md  app.json  package.json  test-adhan.js
ios/: Adhan.h  Adhan.mm  AdhanBridge.swift  AdhanImpl.swift  AdhanModule.mm  AdhanModule.swift  Dummy.swift  (+1 more)
(+30 files in other folders)
